Change project to C-only.

--- a/pico/tts/CMakeLists.txt
+++ b/pico/tts/CMakeLists.txt
@@ -6,6 +6,6 @@ add_executable(${PROJECT_NAME} ${SRC_LIST})
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../compat/include)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} svoxpico)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} svoxpico m)
 
 
